force-app/main/default/objects/Opportunity/fields/GoodsClassCode__c.field-meta.xml
<CustomField>
    <fullName>GoodsClassCode__c</fullName>
    <label>商品分類コード</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>