force-app/main/default/objects/Opportunity/fields/Region_Zone__c.field-meta.xml
<CustomField>
    <fullName>Region_Zone__c</fullName>
    <description
  >Displays the Region and Zone values from the account record.</description>
    <formula
  >TEXT(Account.Region__c)  &amp; &quot;/&quot;  &amp;  text(Account.Zone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account region and zone.</inlineHelpText>
    <label>Region/Zone</label>
    <type>Text</type>
</CustomField>