force-app/main/default/objects/Opportunity/recordTypes/r1.recordType-meta.xml
<RecordType>
    <fullName>r1</fullName>
    <active>true</active>
    <businessProcess>Retail Sales</businessProcess>
    <label>r1</label>
</RecordType>