force-app/main/default/objects/Opportunity/listViews/High_Probability_Opportunities.listView-meta.xml
<ListView>
    <fullName>High_Probability_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Proposal/Price Quote,Negotiation/Review</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.PROBABILITY</field>
        <operation>greaterOrEqual</operation>
        <value>50</value>
    </filters>
    <label>High Probability Opportunities</label>
</ListView>